--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,13 @@ body {
     color: #333;
 }
 
+@media only screen and (max-width: 400px) {
+    body {
+        width: 90%;
+        height: 90%;
+    }
+}
+
 /* Header Section */
 header {
     background-color: #333;
