--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
 }
 
 @media only screen and (max-width: 400px) {
-    body {
+     .body {
         width: 90%;
         height: 90%;
     }
