--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,12 @@ body {
         height: 90%;
     }
 }
+@media only screen and (max-width: 800px) {
+     .body {
+        width: 90%;
+        height: 90%;
+    }
+}
 
 /* Header Section */
 header {
