--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,11 @@
 }
 
 body {
+    display: flex;
+    flex-direction:column;
+    max-width: 1440px;
+    margin: 0 auto;
+    height: 100vh;
     font-family: 'Arial', sans-serif;
     background-color: #f4f4f4;
     color: #333;
